# rust-korean

./: .gitignore  Cargo.toml  README.md  bun.lockb  docker-compose.yml  package.json  tsconfig.json
backend/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  analysis_cache.json  docker-compose.yml
backend/.sqlx/: query-27df97c705047e05ecda751e9ad6b2dde620046873ce046bbe83c5c4e9044786.json  query-5208772916435fc41c328055ce5a42f62852fe12a60fbb4b25b7c7918b4cc0ae.json  query-78492815cd76bb1b4650d6b159b47894c4018641c12ce491bd690adbe1fd33cc.json  query-8217ef066cbc5f0c2abb7a9e6f522a2b60b33d8f505c3fd3a25d5a481c3edcb1.json  query-b31d4c213947e6053f4c6c67e68d009cb59d15862d007a20a797c4bb0fc23051.json  query-d2fce8fab496a7c020a66d20eae1bb79d5e7a3b4d02c540a535d7d63e4a2d324.json  query-f1df887ee2c3d9c24edea02e134fd6a34d4d89338467e70d8b59a4559961e011.json
backend/migrations/: 20240104205850_init.up.sql
backend/src/: deinflect.rs  dictionary.rs  error_handling.rs  hangul.rs  main.rs  search.rs
backend/src/db/: lookup.rs  mod.rs  word_status.rs
backend/src/extractors/: auth_session.rs  mod.rs
backend/src/resource/: mod.rs
backend/src/resource/analyze/: mod.rs
backend/src/resource/lookup/: mod.rs
backend/src/resource/word_status/: count.rs  mod.rs
backend/src/routes/: analyze.rs  lookup.rs  mod.rs  word_status.rs
backend/src/routes/analyze/: mod.rs
backend/src/routes/lookup/: mod.rs
backend/src/routes/word_status/: count.rs  mod.rs
browser-extension/: .gitignore  README.md  bun.lockb  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+60 files in other folders)
